--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 body{
     background-color: #B5C1DE;
+    margin: 0;
+    padding: 0;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 h1 {
-    text-align: center;
     font-family: 'Ubuntu', sans-serif;
     font-style: italic;
+    font-size: 50px;
 }
 
 p{
     font-family: 'Ubuntu', sans-serif;
-    text-align:center;
+    font-size:24px;
+    line-height: 50px;
 }
 .card{
     background-color: #D4DEED;
@@ -20,3 +24,77 @@ p{
     display:flex;
     justify-content:center;
 }
+
+.navbar {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #D4DEED;
+    width:100%;
+    height: 70px;
+    z-index: 1;
+}
+
+.nav {
+    display: flex;
+    justify-content: right;
+    list-style: none;
+    margin-right:15%;
+}
+
+.logo {
+    flex: 1 1 auto;
+    margin-left: 10%;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 33px;
+}
+
+a{
+    margin: 15px;
+    color: #000;
+    text-decoration:none;
+}
+
+a:hover {
+    color: #000;
+}
+
+.banner-area {
+    position:relative;
+    background-image:url(img/water-lilies.jpg);
+    width:100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+.overview-area, .motivation-area, .about-area, .topic-area, .innovation-area{
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    height: 700px;
+}
+
+.text.part {
+    width:65%;
+    height: 80%;
+}
+
+.overview-area, .about-area, .innovation-area {
+    background: #D4DEED;
+}
+
+.motivation-area, .topic-area{
+    background: #FAF9F9;
+}
+
+
