--- a/style.css
+++ b/style.css
@@ -1,100 +1,78 @@
+*{
+    box-sizing:border-box;
+}
+
 body{
-    background-color: #B5C1DE;
-    margin: 0;
-    padding: 0;
-    font-family: 'Ubuntu', sans-serif;
+    margin:0;
+    padding:0;
 }
 
-h1 {
-    font-family: 'Ubuntu', sans-serif;
-    font-style: italic;
-    font-size: 50px;
-}
-
-p{
-    font-family: 'Ubuntu', sans-serif;
-    font-size:24px;
-    line-height: 50px;
-}
-.card{
-    background-color: #D4DEED;
-}
-
-.bigimg {
+.navbar{
     display:flex;
-    justify-content:center;
-}
-
-.navbar {
-    position: fixed;
-    display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: #D4DEED;
-    width:100%;
-    height: 70px;
-    z-index: 1;
+    background-color: #6799D6;
+    color:white;
 }
 
-.nav {
-    display: flex;
-    justify-content: right;
-    list-style: none;
-    margin-right:15%;
+.title {
+    font-size:1.5rem;
+    margin:.5rem;
 }
 
-.logo {
-    flex: 1 1 auto;
-    margin-left: 10%;
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 33px;
+.navbar-links ul{
+    margin:0;
+    padding:0;
+    display:flex;
 }
 
-a{
-    margin: 15px;
-    color: #000;
+.navbar-links li {
+    list-style:none;
+}
+
+.navbar-links li a {
     text-decoration:none;
+    color:white;
+    padding:1rem;
+    display:block;
 }
 
-a:hover {
-    color: #000;
+.navbar-links li:hover{
+    background-color:#A0CBE7;
 }
 
-.banner-area {
-    position:relative;
-    background-image:url(img/water-lilies.jpg);
+.toggle-button{
+    position: absolute;
+    top:.75rem;
+    right:1rem;
+    display:none;
+    flex-direction:column;
+    justify-content:space-between;
+    width:30px;
+    height:21px;
+}
+
+.toggle-button .bar{
+    height: 3px;
     width:100%;
-    height: 100vh;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
+    background-color:white;
+    border-radius:10px;
 }
 
-.overview-area, .motivation-area, .about-area, .topic-area, .innovation-area{
-    position: relative;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: row;
-    width: 100%;
-    height: 700px;
+@media (max-width:400px) {
+    .toggle-button{
+        display:flex;
+    }
+    .navbar-links{
+        display:none;
+        width:100%;
+    }
+    .navbar{
+        flex-direction:column;
+        align-items:flex-start;
+    }
+    .navbar-links ul{
+        width:100%;
+        flex-direction:column;
+    }
 }
-
-.text.part {
-    width:65%;
-    height: 80%;
-}
-
-.overview-area, .about-area, .innovation-area {
-    background: #D4DEED;
-}
-
-.motivation-area, .topic-area{
-    background: #FAF9F9;
-}
-
-
