--- a/style.css
+++ b/style.css
@@ -1,78 +1,85 @@
 *{
-    box-sizing:border-box;
-}
-
-body{
-    margin:0;
     padding:0;
-}
-
-.navbar{
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
-    background-color: #6799D6;
-    color:white;
-}
-
-.title {
-    font-size:1.5rem;
-    margin:.5rem;
-}
-
-.navbar-links ul{
     margin:0;
-    padding:0;
-    display:flex;
+    box-sizing: ;
 }
-
-.navbar-links li {
-    list-style:none;
+html{
+    font-size: 10px;
+    font-family: 'Ubuntu', sans-serif;
 }
-
-.navbar-links li a {
+a{
     text-decoration:none;
-    color:white;
-    padding:1rem;
-    display:block;
 }
-
-.navbar-links li:hover{
-    background-color:#A0CBE7;
-}
-
-.toggle-button{
-    position: absolute;
-    top:.75rem;
-    right:1rem;
-    display:none;
-    flex-direction:column;
-    justify-content:space-between;
-    width:30px;
-    height:21px;
-}
-
-.toggle-button .bar{
-    height: 3px;
+.title-container{
+    min-height:100vh;
     width:100%;
-    background-color:white;
-    border-radius:10px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
 
-@media (max-width:400px) {
-    .toggle-button{
-        display:flex;
-    }
-    .navbar-links{
-        display:none;
-        width:100%;
-    }
-    .navbar{
-        flex-direction:column;
-        align-items:flex-start;
-    }
-    .navbar-links ul{
-        width:100%;
-        flex-direction:column;
-    }
+#title{
+    background-image:url(img/bridge.jpg);
+    background-size:cover;
+    background-position:top center;
+    position:relative;
+}
+#title::after{
+    position:absolute;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    background-color:black;
+    content:'';
+    opacity:0.2;
+    z-index:-1;
+}
+#title h1{
+    display:block;
+    font-size:3rem;
+    position:relative;
+    color:white;
+}
+#title .cta{
+    font-size:1.5rem;
+    display:inline-block;
+    padding:10px 30px;
+    color:#4853BB;
+    background-color:transparent;
+    border:2px solid #4853BB;
+    text-transform:uppercase;
+    letter-spacing:.1rem;
+    margin-top:36px;
+    transition:.3s ease background-color;
+    transition-property:background-color,color;
+}
+#title .cta:hover{
+    color:white;
+    background-color:#4853BB;
+}
+
+
+#overview .overview-container{
+    flex-direction:column;
+    text-align:center;
+    max-width:1500px;
+    margin:0 auto;
+    padding:100px 0;
+}
+#overview .overview-title{
+    font-size:4rem;
+    font-weight:300;
+    color:black;
+    margin-bottom:10px;
+    text-transform:uppercase;
+    letter-spacing:.2rem;
+    text-align:center;
+}
+#overview .overview-main p{
+    font-size:1.4rem;
+    margin-top:5px;
+    line-height:2.5rem;
+    font-weight:200;
+    letter-spacing:.01rem;
 }
