--- a/style.css
+++ b/style.css
@@ -59,14 +59,14 @@ a{
 }
 
 
-#overview .overview-container{
+.overview-container{
     flex-direction:column;
     text-align:center;
     max-width:1500px;
     margin:0 auto;
     padding:100px 0;
 }
-#overview .overview-title{
+.overview-title{
     font-size:4rem;
     font-weight:300;
     color:black;
@@ -98,4 +98,97 @@ a{
     line-height:2.5rem;
     font-weight:200;
     letter-spacing:.01rem;
+}
+
+#tech .tech-container{
+    flex-direction:column;
+    max-width:1200px;
+    margin:0 auto;
+    padding:100px 0;
+}
+
+#tech .tech-title {
+    margin-bottom:50px;
+}
+
+#tech .all-tech{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+}
+
+#tech .tech-card{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+    width:80%;
+    margin:20px auto;
+    overflow:hidden;
+    border-radius:10px;
+}
+
+#tech .tech-info{
+    padding:30px;
+    flex-basis:50%;
+    background-color:white;
+    height:100%;
+    display:flex;
+    align-items:flex-start;
+    justify-content:center;
+    flex-direction:column;
+    background-image: linear-gradient(60deg, #686D8C 0%, #686D8C 100%);
+    color:white;
+}
+
+#tech .tech-info h1{
+    font-size:4rem;
+    font-weight:500;
+}
+
+#tech .tech-info h2{
+    font-size:2rem;
+    font-style:italic;
+    font-weight:400;
+    margin-top:10px;
+}
+
+#tech .tech-info p{
+    font-size:1.5rem;
+}
+
+#tech .tech-img{
+    flex-basis:50%;
+    height:300px;
+    overflow:hidden;
+}
+
+
+#future .innovation-container{
+    flex-direction:column-reverse;
+    text-align:center;
+    max-width:1200px;
+    margin:0 auto;
+    padding:100px 20px;
+}
+
+#future .col-left{
+    width:250px;
+    height:360;
+}
+#future .col-right{
+    width:100%;
+}
+#future .col-right h2{
+    font-size:2rem;
+    font-weight:500;
+    letter-spacing:.2rem;
+    margin-bottom:10px;
+    text-align:center;
+    font-style:italic;
+}
+#future .col-right p{
+    margin-bottom:20px;
+    font-size:1.8rem;
 }
