--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+slow{
+    margin:0;
+    padding:0;
+}
 html{
     font-size: 10px;
     font-family: 'Ubuntu', sans-serif;
@@ -212,4 +216,24 @@ a{
     #tech .tech-card .tech-img{
         height:100%;
     }
+}
+
+.video{
+  background-color: #B5C1DE;
+  line-height: 2.5em;
+  padding: 1.5em;
+  margin: 1.5em;
+  box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.video h1{
+    font-size:4rem;
+    font-weight:500;
+    text-align:center;
+}
+.video h2{
+    font-size:2rem;
+    font-style:italic;
+    font-weight:400;
+    margin-top:10px;
+    text-align:center;
 }
