--- a/style.css
+++ b/style.css
@@ -2,6 +2,41 @@ slow{
     margin:0;
     padding:0;
 }
+.navbar{
+    position:fixed;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:row;
+    flex-wrap:wrap;
+    background-color:#B5C1DE;
+    width:100%;
+    height:70px;
+    z-index:1;
+}
+.nav{
+    display:flex;
+    justify-content:flex-end;
+    list-style:none;
+    margin-right:15%;
+}
+.logo{
+    flex:1 1 auto;
+    margin-left:10%;
+    text-transform:uppercase;
+    letter-spacing:1px;
+    font-weight:bold;
+    font-size:25px;
+}
+a{
+    margin:15px;
+    color:#000;
+    text-decoration:none;
+    text-transform:uppercase;
+}
+a:hover{
+    color:white;
+}
 html{
     font-size: 10px;
     font-family: 'Ubuntu', sans-serif;
