make revisions to the overview

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 slow{
-    margin:0;
-    padding:0;
+    margin:0px;
+    padding:0px;
 }
 .navbar{
     position:fixed;
@@ -27,6 +27,15 @@ slow{
     letter-spacing:1px;
     font-weight:bold;
     font-size:25px;
+}
+nav ul{
+    float:right;
+    margin-right:20px;
+}
+nav ul li{
+    display:flex;
+    line-height:80px;
+    margin:0 5px;
 }
 a{
     margin:15px;
@@ -165,7 +174,7 @@ a{
 }
 
 #tech .tech-info{
-    padding:30px;
+    padding:45px;
     flex-basis:50%;
     background-color:white;
     height:100%;
@@ -173,7 +182,7 @@ a{
     align-items:flex-start;
     justify-content:center;
     flex-direction:column;
-    background-image: linear-gradient(60deg, #686D8C 0%, #686D8C 100%);
+    background-image: linear-gradient(65deg, #686D8C 0%, #686D8C 100%);
     color:white;
 }
 
@@ -196,7 +205,6 @@ a{
 #tech .tech-img{
     flex-basis:50%;
     height:300px;
-    overflow:hidden;
 }
 
 
